<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CodecOpenActivity" >

    <TextView
        android:id="@+id/codecOpenMessage_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/codecOpenMessage" />

    <Button
        android:id="@+id/codecOpenStart_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/codecOpenMessage_text"
        android:onClick="clickStart"
        android:text="@string/start_button" />

    <Button
        android:id="@+id/codeOpenGc_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/codecOpenStart_button"
        android:layout_below="@+id/codecOpenStart_button"
        android:onClick="clickGc"
        android:text="@string/GC" />

    <Button
        android:id="@+id/codeOpenHalt_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/codeOpenGc_button"
        android:layout_below="@+id/codeOpenGc_button"
        android:onClick="clickHalt"
        android:text="@string/halt" />

</RelativeLayout>