<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CameraCaptureActivity" >

    <android.opengl.GLSurfaceView
        android:id="@+id/cameraPreviewSurface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/toggleRecording_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/cameraOutputFile_text" />

    <Button
        android:id="@+id/toggleRecording_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggleRecordingOn"
        android:onClick="clickToggleRecording" />

    <TextView
        android:id="@+id/cameraOutputFileLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/toggleRecording_button"
        android:layout_below="@+id/toggleRecording_button"
        android:text="@string/cameraOutputFileLabel_text" />

    <TextView
        android:id="@+id/cameraOutputFile_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cameraOutputFileLabel"
        android:layout_alignBottom="@+id/cameraOutputFileLabel"
        android:layout_toRightOf="@+id/cameraOutputFileLabel"
        android:paddingLeft="4dp"
        android:text="@string/cameraOutputFile_text" />

    <TextView
        android:id="@+id/cameraParams_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/toggleRecording_button"
        android:layout_alignBottom="@+id/toggleRecording_button"
        android:layout_toRightOf="@+id/toggleRecording_button"
        android:paddingLeft="4dp"
        android:text="[?]"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <!-- these overlap with the SurfaceView; by default, it's underneath -->
    
    <CheckBox
        android:id="@+id/rebindHack_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cameraPreviewSurface"
        android:layout_below="@+id/cameraOutputFile_text"
        android:onClick="clickRebindCheckbox"
        android:text="@string/rebindHack_checkbox" />

</RelativeLayout>
