<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2013 Google Inc. All rights reserved.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PlayMovieActivity" >

    <Button
        android:id="@+id/play_stop_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/play_button_text"
        android:onClick="clickPlayStop" />

    <Spinner
        android:id="@+id/playMovieFile_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/play_stop_button"
        android:layout_toRightOf="@+id/play_stop_button" />
    
    <CheckBox
        android:id="@+id/locked60fps_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/movie_texture_view"
        android:layout_below="@+id/play_stop_button"
        android:text="@string/locked60fps_checkbox" />

    <CheckBox
        android:id="@+id/loopPlayback_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/locked60fps_checkbox"
        android:layout_alignBottom="@+id/locked60fps_checkbox"
        android:layout_toRightOf="@+id/locked60fps_checkbox"
        android:text="@string/loopPlayback_checkbox" />

    <TextureView
        android:id="@+id/movie_texture_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/play_stop_button"
        android:layout_below="@+id/locked60fps_checkbox" />

</RelativeLayout>